# finding-object

./: .gitignore  README.md  main.py  pyproject.toml
finding/: find_object.ipynb
