[project]
name = "stockemotion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gensim>=4.3.2",
    "imutils>=0.5.4",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nn>=0.1.1",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pydrive2>=1.21.3",
    "reportlab>=4.3.1",
    "ruff>=0.9.10",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.2",
    "spire-xls>=14.12.0",
    "tabulate>=0.9.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
